--- a/about.html
+++ b/about.html
@@ -27,7 +27,18 @@
 </head>
 
 <body>
+<div id="loading">
+<div id="loading-center">
+<div id="loading-center-absolute">
+<div class="object" id="object_four"></div>
+<div class="object" id="object_three"></div>
+<div class="object" id="object_two"></div>
+<div class="object" id="object_one"></div>
 
+</div>
+</div>
+ 
+</div>
 
 
 <div id="wrapper">
@@ -76,7 +87,13 @@
 </div>
 <script>$('footer').animate({ opacity: 1 }, { duration: 2500 });</script>
 <script>$('#about-bg').animate({ opacity: 0.4 }, { duration: 2500 });</script>
+
 <script>
+
+$(window).load(function() {
+  $("#loading").fadeOut(500);
+  
+});
 	$(document).ready(function () {
   var trigger = $('.hamburger'),
       overlay = $('.overlay'),
