--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
 </head>
 
 <body>
+
+<div id="loading">
+<div id="loading-center">
+<div id="loading-center-absolute">
+<div class="object" id="object_four"></div>
+<div class="object" id="object_three"></div>
+<div class="object" id="object_two"></div>
+<div class="object" id="object_one"></div>
+
+</div>
+</div>
+ 
+</div>
  <!--
   <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
@@ -80,6 +93,10 @@
 	</ul>
 </footer> -->
 <script> 
+$(window).load(function() {
+	$("#loading").fadeOut(500);
+	
+});
  $('#about').hover(function(){
 			$('#bg').fadeTo(1000,0.5);
 			},
