--- a/work.html
+++ b/work.html
@@ -185,12 +185,34 @@
 			</div></a>
 		</div>
 		<div class="menu col-md-4 print-design">
-			<a href="mars.html"><div class="display">
+			<a href="mars.html"><div class="display" style="margin-bottom: 95px;">
 				<img class="print img-responsive" src="images/print/mars.jpg" width="480">
 			<div class="caption">
 				<h3>MARS</h3>
 				<p>
 					PRINT DESIGN
+				</p>
+			</div>
+			</div></a>
+		</div>
+		<div class="menu col-md-4 print-design">
+			<a href="delhi.html"><div class="display">
+				<img class="logo img-responsive" src="images/india-gate.jpg">
+			<div class="caption">
+				<h3>INDIA GATE</h3>
+				<p>
+					PRINT DESIGN
+				</p>
+			</div>
+			</div></a>
+		</div>
+		<div class="menu col-md-4 website">
+			<a href="pixelbug.html"><div class="display">
+				<img class="web img-responsive" src="images/pixelbug.jpg">
+			<div class="caption">
+				<h3>PIXELBUG</h3>
+				<p>
+					WEBSITE
 				</p>
 			</div>
 			</div></a>
