--- a/stockist.html
+++ b/stockist.html
@@ -56,25 +56,27 @@
 	<div id="portfolio-bg"></div>
 	<div class="container">
 		<div id="portfolio-image">
-			<div class="col-md-6 col-md-offset-3">
 				<h2>STOCKIST</h2>
 				<h4>A wedding card retailer app</h4>
 
         <div class="ux-content">
-          <p>One morning, I was contacted about a project involving a problem faced by the vendors. This is my story of my approach to solving a problem about an industry I knew nothing about.</p>
+          <div class="col-md-8 col-md-offset-2">
+            <p>One morning, I was contacted about a project involving a problem faced by the vendors. This is my story of my approach to solving a problem about an industry I knew nothing about.</p>
 
-          <h3>The Problem</h3>
-          <p>
-            When a retailer shows wedding cards to a client, he is usually unaware of it’s availability in stock unless and otherwise enquired about it by the customer or during his seasonal stock checkups. This not only affects his sales but also the customer who doesn’t get the desired wedding card design. 
-          </p>
+            <h3>THE PROBLEM</h3>
+            <p>
+              When a retailer shows wedding cards to a client, he is usually unaware of it’s availability in stock unless and otherwise enquired about it by the customer or during his seasonal stock checkups. This not only affects his sales but also the customer who doesn’t get the desired wedding card design. 
+            </p>
 
-          <h3>Understanding the process</h3>
-          <p>Since I had no prior knowledge of how the industry fuctions, I got down to do some research to find the pain points that were having direct impact on the problem.</p>
-          <p>When a customer selects a card at a Wedding card shop, the retailer confirms the availability of the card by making a call to the warehouse, where an inventory manager turns the pages of his dusty book to check the stock of the card. This process ranges from minutes to hours to even a day! This means problems for two parties, one being the customer who has to wait and in the worst case be informed about the unavailability of the card after a day! The other party being the inventory manager who needs to find the card, but that’s his job (can this be made more easier? ). On an average day, a inventory manager deals with 100 - 400 orders. Now, that's a large number and to deal with that is surely an herculean task.</p>
-
-          <img class="img-responsive" src="images/stockist/workflow.jpg">
-
-          <h3>Problem's in the process</h3>
+            <h3>UNDERSTANDING THE PROCESS</h3>
+            <p>Since I had no prior knowledge of how the industry fuctions, I got down to do some research to find the pain points that were having direct impact on the problem.</p>
+            <p>When a customer selects a card at a Wedding card shop, the retailer confirms the availability of the card by making a call to the warehouse, where an inventory manager turns the pages of his dusty book to check the stock of the card. This process ranges from minutes to hours to even a day! This means problems for two parties, one being the customer who has to wait and in the worst case be informed about the unavailability of the card after a day! The other party being the inventory manager who needs to find the card, but that’s his job (can this be made more easier? ). On an average day, a inventory manager deals with 100 - 400 orders. Now, that's a large number and to deal with that is surely an herculean task.</p>
+          </div>
+          <div class="col-md-12">
+            <img class="img-responsive" src="images/stockist/workflow.jpg">
+          </div>
+          <div class="col-md-8 col-md-offset-2">
+            <h3>PROBLEMS IN THE PROCESS</h3>
           <ul>
             <li>Collectively an offline process, requires manpower.</li>
             <li>Difficult for the inventory manager to keep track of all orders.</li>
@@ -82,20 +84,25 @@
             <li>Time consuming for the customer.</li>
           </ul>
 
-          <h3>Understanding the user</h3>
+          <h3>PERSONNA</h3>
           <p>
-              Mahesh is a 35 year old card retailer, who has inherited his shop from his father. He is not a  graduate and he spends most of his time chatting with his friends when not attending to customers. Despite being a major player in the wedding card industry he hasn’t achieved 100% conversion rate from his customers. He spends most of his time in his shop and his day starts by cleaning cards and attending calls from the warehouse which supplies cards informing him about the cards that are out of stock. The warehouse supplies cards to other retailers also.
+              Mahesh is a 35 year old card retailer, who has inherited his shop from his father. He is not a  graduate and he spends most of his time chatting with his friends when not attending to customers. Despite being a major player in the wedding card industry he hasn’t achieved 100% conversion rate from his customers. He spends most of his time in his shop and his day starts by cleaning cards and attending calls from the warehouse which supplies cards informing him about the cards that are out of stock. The warehouse supplies cards to other retailers also.<br>
               <b>Goals</b> Increase conversion rate and customer satisfaction.<br>
               <b>Frustration</b> the everyday routine of calling the warehouse about the out of stock cards, in order to not lose customer because of unavailability of card.
           </p>
 
-          <h3>Solution</h3>
+          <h3>SOLUTION</h3>
           <p>
             Looking at the exisiting process, I tried to eliminate the need of the retailer to depend on the inventory manager for checking the availability of the card. Instead of having a fully offline process it was more benefecial if the whole inventory was shifted to the cloud. This would mean that the retailer would be able to check the availabilty of the card and also eliminate the routine calls to the inventory manager by just using the app.
           </p>
-          <img class="img-responsive" src="images/stockist/new workflow.png">
-          
-          <h3>The Solution Scenario</h3>
+          </div>
+
+          <div class="col-md-12">
+             <img class="img-responsive" src="images/stockist/new workflow.png">
+          </div>
+         
+          <div class="col-md-8 col-md-offset-2">
+            <h3>SCENARIOS</h3>
           <p>
             How would the solution prove to be more efficient? A retailer would just have to scan the barcode/ QR code present in the card with the app which would retrieve the information about the card from the cloud. </p>
             <p>
@@ -107,6 +114,7 @@
             <p>
             <i>What happens if the customer doesn't pay the full amount or doesn't pay at all? </i>
             </p>
+            <p>
             To tackle this, there's a block period imposed for each card and the customer should pay the full amount before it expires. The card will be released after the expiration of the block period.  
             </p>
             <p>
@@ -119,16 +127,18 @@
               <br><b>Modify: </b> The stockist can deliver the card by the date mentioned by the stockist, the retailer can choose to accept or reject.
             </p>
 
-            <h3>Wireframes</h3>
+            <h3>WIREFRAMES</h3>
             <p>Considering my observations and solution scenarios, I came up with wireframes.</p>
+          </div>
+          <div class="col-md-12">
             <img src="images/stockist/wf-exp.jpg">
             <img src="images/stockist/showcase.jpg">
-        </div>	
+          </div>
 			</div>
 		</div>
 	</div>
 </div>
-<script>$('#portfolio-bg').animate({ opacity: 0.4 }, { duration: 2500 });</script>
+
 <script>
 	$(document).ready(function () {
   var trigger = $('.hamburger'),
