--- a/stockist.html
+++ b/stockist.html
@@ -132,7 +132,13 @@
           </div>
           <div class="col-md-12">
             <img src="images/stockist/wf-exp.jpg">
+          </div>
+          <div class="col-md-8 col-md-offset-2">
+            <h3>MOCKUPS</h3>
+            <p>Few screens based out of the wireframes.</p>
+          </div>
             <img src="images/stockist/showcase.jpg">
+
           </div>
 			</div>
 		</div>
