--- a/stockist.html
+++ b/stockist.html
@@ -61,11 +61,11 @@
 
         <div class="ux-content">
           <div class="col-md-8 col-md-offset-2">
-            <p>One morning, I was contacted about a project involving a problem faced by the vendors. This is my story of my approach to solving a problem about an industry I knew nothing about.</p>
+            <p>One morning, I was contacted about a project involving a problem faced by wedding card retailers. This is my story of my approach to solving a problem about an industry I knew nothing about.</p>
 
             <h3>THE PROBLEM</h3>
             <p>
-              When a retailer shows wedding cards to a client, he is usually unaware of it’s availability in stock unless and otherwise enquired about it by the customer or during his seasonal stock checkups. This not only affects his sales but also the customer who doesn’t get the desired wedding card design. 
+              When a retailer shows wedding cards to a client, he is usually unaware of it’s availability in stock unless and otherwise enquired by the customer or during his stock checkups. This not only affects his sales but also the customer who doesn’t get the desired wedding card design. 
             </p>
 
             <h3>UNDERSTANDING THE PROCESS</h3>
@@ -75,18 +75,26 @@
           <div class="col-md-12">
             <img class="img-responsive" src="images/stockist/workflow.jpg">
           </div>
+          <div class="col-md-12">
+            <img class="img-responsive" src="images/stockist/flow.jpg">
+          </div>
+          <div class="col-md-8 col-md-offset-2" style="text-align:center">
+            <p>
+              <i>The process in the flow which determines the speed of the process.</i>
+            </p>
+          </div>
           <div class="col-md-8 col-md-offset-2">
             <h3>PROBLEMS IN THE PROCESS</h3>
           <ul>
             <li>Collectively an offline process, requires manpower.</li>
             <li>Difficult for the inventory manager to keep track of all orders.</li>
-            <li>Slow search time.</li>
+            <li>Slow card search time.</li>
             <li>Time consuming for the customer.</li>
           </ul>
 
           <h3>PERSONNA</h3>
           <p>
-              Mahesh is a 35 year old card retailer, who has inherited his shop from his father. He is not a  graduate and he spends most of his time chatting with his friends when not attending to customers. Despite being a major player in the wedding card industry he hasn’t achieved 100% conversion rate from his customers. He spends most of his time in his shop and his day starts by cleaning cards and attending calls from the warehouse which supplies cards informing him about the cards that are out of stock. The warehouse supplies cards to other retailers also.<br>
+              Mahesh is a 35 year old card retailer, who has inherited his shop from his father. He is not a  graduate and he spends most of his time chatting with his friends when not attending to customers. Despite being a major player in the wedding card industry he hasn’t achieved 100% conversion rate from his customers. He spends most of his time in his shop and his day starts by cleaning the cards for display and attending calls from the warehouse which supplies cards, informing him about the cards that are out of stock. The warehouse supplies cards to other retailers also.<br>
               <b>Goals</b> Increase conversion rate and customer satisfaction.<br>
               <b>Frustration</b> the everyday routine of calling the warehouse about the out of stock cards, in order to not lose customer because of unavailability of card.
           </p>
@@ -137,9 +145,23 @@
             <h3>MOCKUPS</h3>
             <p>Few screens based out of the wireframes.</p>
           </div>
+          <div class="col-md-12">
             <img src="images/stockist/showcase.jpg">
 
           </div>
+          <div class="col-md-8 col-md-offset-2">
+            <h3>USER TESTING</h3>
+            <p>The retailers were able to check the availability of the card using the scan option and since the app is in development other features like Requsets, Payment weren't tested, however the retailers.</p>
+            <h3>FUTURE PLANS</h3>
+            <ul>
+              <li>Make Onboarding screens for users new to the smartphone evnivronment.</li>
+              <li>Conduct user testing for Requests and payment features.</li>
+              <li>Implement more features about the card purchasing trends.</li>
+
+            </ul>
+          
+          </div>
+
 			</div>
 		</div>
 	</div>
