--- a/work.html
+++ b/work.html
@@ -83,18 +83,39 @@
 	<div class="work-title">
 		<img id="work-logo" src="images/logo.png">
 		<h2>WORK</h2>
-		<ul>
+		<!-- <ul>
 
 			<li id="all"><a href="#">ALL</a></li>
 			<li id="logo"><a href="#">LOGO</a></li>
 			<li id="print"><a href="#">PRINT DESIGN</a></li>
 			<li id="packaging"><a href="#">PACKAGING</a></li>
 			<li id="web"><a href="#">WEB</a></li>
-		</ul>
+		</ul> -->
 		<script>$('.work-title h2').delay(800).animate({ opacity: 1 }, { duration: 2500 });</script>
 	<script>$('.work-title ul').delay(900).animate({ opacity: 1 }, { duration: 2500 });</script>	
 	</div>	
-
+		<div class="menu col-md-4 print-design">
+			<a href="stockist.html"><div class="display">
+				<img class="logo img-responsive" src="images/stockist-home.jpg">
+			<div class="caption">
+				<h3>STOCKIST</h3>
+				<p>
+					UI/UX 
+				</p>
+			</div>
+			</div></a>
+		</div>
+		<div class="menu col-md-4 website">
+			<a href="wedding-registry.html"><div class="display">
+				<img class="web img-responsive" src="images/wedding-registry.jpg">
+			<div class="caption">
+				<h3>WEDDING REGISTRY</h3>
+				<p>
+					CASE STUDY
+				</p>
+			</div>
+			</div></a>
+		</div>
 		<div class="menu col-md-4 logo-design" >
 			<a href="solitaire.html"><div class="display">
 				<img class="logo img-responsive" src="images/logo/solitaire.jpg">
@@ -118,28 +139,7 @@
 			</div>
 			</div></a>
 		</div>
-		<div class="menu col-md-4 logo-design">
-			<a href="epiklogo.html"><div class="display">
-				<img class="logo img-responsive" src="images/logo/epiklogo.jpg">
-			<div class="caption">
-				<h3>EPIK</h3>
-				<p>
-					LOGO CONCEPT
-				</p>
-			</div>
-			</div></a>
-		</div>
-		<div class="menu col-md-4 website">
-			<a href="kingsholiday.html"><div class="display">
-				<img class="web img-responsive" src="images/KH/showcase.jpg">
-			<div class="caption">
-				<h3>KINGS HOLIDAY</h3>
-				<p>
-					WEBSITE
-				</p>
-			</div>
-			</div></a>
-		</div>
+		
 		<div class="menu col-md-4 package">
 			<a href="epik-card.html"><div class="display">
 				<img class="print img-responsive" src="images/print/EPIK-CARD.jpg">
@@ -206,7 +206,29 @@
 			</div>
 			</div></a>
 		</div>
+		<div class="menu col-md-4 logo-design">
+			<a href="epiklogo.html"><div class="display">
+				<img class="logo img-responsive" src="images/logo/epiklogo.jpg">
+			<div class="caption">
+				<h3>EPIK</h3>
+				<p>
+					LOGO CONCEPT
+				</p>
+			</div>
+			</div></a>
+		</div>
 		<div class="menu col-md-4 website">
+			<a href="kingsholiday.html"><div class="display">
+				<img class="web img-responsive" src="images/KH/showcase.jpg">
+			<div class="caption">
+				<h3>KINGS HOLIDAY</h3>
+				<p>
+					WEBSITE
+				</p>
+			</div>
+			</div></a>
+		</div>
+		<!-- <div class="menu col-md-4 website">
 			<a href="pixelbug.html"><div class="display">
 				<img class="web img-responsive" src="images/pixelbug.jpg">
 			<div class="caption">
@@ -216,7 +238,7 @@
 				</p>
 			</div>
 			</div></a>
-		</div>
+		</div> -->
 
 
 	</div>
