Pointing error fixed

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<p>GRAPHIC / WEB / UI / UX</p>
 			<ul>
 				<a href="work.html" id="work"><li>WORK</li></a>
-				<a href="images/resume-updated.pdf"id="resume"><li>RESUME</li></a>
+				<a href="images/resume-new-mod.pdf"id="resume"><li>RESUME</li></a>
 				<a href="about.html"id="about"><li>ABOUT ME</li></a>
 				<!-- <a href="contact.html" id="contact"><li>CONTACT</li></a> -->
 			</ul>
