--- a/delhi.html
+++ b/delhi.html
@@ -10,9 +10,8 @@
     <meta name="Manjith" content="">
 
 	<title>Manjith Dungdung</title>
-
-	<link href='https://fonts.googleapis.com/css?family=Oxygen:700,400' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Montserrat:700,400' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Cardo:700,400' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat:700,400' rel='stylesheet' type='text/css'>
 
 	 <link href="css/bootstrap.min.css" rel="stylesheet">
 	 <link href="css/style.css" rel="stylesheet">
