--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 
 	<title>Manjith Dungdung</title>
 
+		<link href='https://fonts.googleapis.com/css?family=Cardo:700,400' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:700,400' rel='stylesheet' type='text/css'>
 
 	 <link href="css/bootstrap.min.css" rel="stylesheet">
 	 <link href="css/style.css" rel="stylesheet">
 	 <script src="js/jquery.js"></script>
 	 <script src="js/bootstrap.min.js"></script>
-	 <script src="js/jquery.drawsvg.min.js"></script>
-	 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 
 <body>
