--- a/mars.html
+++ b/mars.html
@@ -11,7 +11,7 @@
 
 	<title>Manjith Dungdung</title>
 
-	<link href='https://fonts.googleapis.com/css?family=Oxygen:700,400' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Cardo:700,400' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:700,400' rel='stylesheet' type='text/css'>
 
 	 <link href="css/bootstrap.min.css" rel="stylesheet">
