--- a/work.html
+++ b/work.html
@@ -112,16 +112,27 @@
 			</div></a>
 		</div>
 		<div class="menu col-md-4 logo-design" >
-			<a href="solitaire.html"><div class="display">
-				<img class="logo img-responsive" src="images/logo/solitaire.jpg">
+			<a href="turb.html"><div class="display">
+				<img class="logo img-responsive" src="images/turb/SHOWCASE.jpg">
 			<div class="caption">
-				<h3>SOLITAIRE</h3>
+				<h3>TURB</h3>
 				<p>
-					LOGO CONCEPT
+					UI/UX
 				</p>
 			</div>
 			</div>
 			</a>
+		</div>
+		<div class="menu col-md-4 website">
+			<a href="kingsholiday.html"><div class="display">
+				<img class="web img-responsive" src="images/KH/showcase.jpg">
+			<div class="caption">
+				<h3>KINGS HOLIDAY</h3>
+				<p>
+					WEBSITE
+				</p>
+			</div>
+			</div></a>
 		</div>
 		<div class="menu col-md-4 logo-design">
 			<a href="damsel.html"><div class="display">
@@ -134,18 +145,7 @@
 			</div>
 			</div></a>
 		</div>
-		
-		<div class="menu col-md-4 package">
-			<a href="epik-card.html"><div class="display">
-				<img class="print img-responsive" src="images/print/EPIK-CARD.jpg">
-			<div class="caption">
-				<h3>EPIK</h3>
-				<p>
-					PACKAGING
-				</p>
-			</div>
-			</div></a>
-		</div>
+
 		<div class="menu col-md-4 package">
 			<a href="epik-package.html"><div class="display">
 				<img class="print img-responsive" src="images/print/epik1.jpg">
@@ -212,17 +212,31 @@
 			</div>
 			</div></a>
 		</div>
-		<div class="menu col-md-4 website">
-			<a href="kingsholiday.html"><div class="display">
-				<img class="web img-responsive" src="images/KH/showcase.jpg">
+				
+		<div class="menu col-md-4 package">
+			<a href="epik-card.html"><div class="display">
+				<img class="print img-responsive" src="images/print/EPIK-CARD.jpg">
 			<div class="caption">
-				<h3>KINGS HOLIDAY</h3>
+				<h3>EPIK</h3>
 				<p>
-					WEBSITE
+					PACKAGING
 				</p>
 			</div>
 			</div></a>
 		</div>
+		<div class="menu col-md-4 logo-design" >
+			<a href="solitaire.html"><div class="display">
+				<img class="logo img-responsive" src="images/logo/solitaire.jpg">
+			<div class="caption">
+				<h3>SOLITAIRE</h3>
+				<p>
+					LOGO CONCEPT
+				</p>
+			</div>
+			</div>
+			</a>
+		</div>
+		
 		<!-- <div class="menu col-md-4 website">
 			<a href="pixelbug.html"><div class="display">
 				<img class="web img-responsive" src="images/pixelbug.jpg">
