--- a/work.html
+++ b/work.html
@@ -113,7 +113,7 @@
 		</div>
 		<div class="menu col-md-4 logo-design" >
 			<a href="turb.html"><div class="display">
-				<img class="logo img-responsive" src="images/turb/SHOWCASE.jpg">
+				<img class="logo img-responsive" src="images/turb/front-showcase.jpg">
 			<div class="caption">
 				<h3>TURB</h3>
 				<p>
@@ -213,7 +213,7 @@
 			</div></a>
 		</div>
 				
-		<div class="menu col-md-4 package">
+		<!-- <div class="menu col-md-4 package">
 			<a href="epik-card.html"><div class="display">
 				<img class="print img-responsive" src="images/print/EPIK-CARD.jpg">
 			<div class="caption">
@@ -223,7 +223,7 @@
 				</p>
 			</div>
 			</div></a>
-		</div>
+		</div> -->
 		<div class="menu col-md-4 logo-design" >
 			<a href="solitaire.html"><div class="display">
 				<img class="logo img-responsive" src="images/logo/solitaire.jpg">
